# quick-docks

./: CMakeLists.txt  README.md  buildspec.json
src/: plugin-main.cpp
